--- a/daemon/config.toml
+++ b/daemon/config.toml
@@ -23,8 +23,8 @@ port = "COM12"  # serial port for serial control
 # Configure your audio devices here
 # Run `daemon list-audio` to get the proper names/paths for your audio devices
 [audio]
-txDevice = "Speakers (Realtek(R) Audio)"
-rxDevice = "Microphone (HD Webcam C525)"
+txDevice = "Speakers (C-Media USB Headphone Set  )"
+rxDevice = "Microphone (C-Media USB Headphone Set  )"
 
 # Text Lookups for zone/channel text
 [lookups]
