--- a/.github/workflows/SDL2-cmake.yml
+++ b/.github/workflows/SDL2-cmake.yml
@@ -9,15 +9,17 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
 
+    defaults:
+      run:
+        working-directory: ./daemon/SDL
+
     strategy:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
 
       # Set up a matrix to run the following 3 configurations:
       # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
-      #
+
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest, windows-latest]
@@ -30,23 +32,12 @@ jobs:
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
-          - os: ubuntu-latest
-            c_compiler: clang
-            cpp_compiler: clang++
-        exclude:
-          - os: windows-latest
-            c_compiler: gcc
-          - os: windows-latest
-            c_compiler: clang
-          - os: ubuntu-latest
-            c_compiler: cl
 
     steps:
-    - name: Checkout SDL2 branch of SDL github
+    - name: Checkout repo with SDL2 submodule
       uses: actions/checkout@v3
       with:
-        name: libsdl-org/SDL
-        ref: SDL2
+        submodules: true
 
     - name: Get & cache dependecies
       uses: awalsh128/cache-apt-pkgs-action@latest
