Update and rename build-daemon.yml to build-daemon-linux.yml

--- a/.github/workflows/build-daemon-linux.yml
+++ b/.github/workflows/build-daemon-linux.yml
@@ -11,7 +11,7 @@ on:
 #    branches: [ "main" ]
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -22,13 +22,26 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
-    - name: Restore dependencies
+    
+    - name: Cache Dependecies
+      uses: actions/cache@v3
+      with:
+        path: ~/.nuget/packages
+        # Look to see if there is a cache hit for the corresponding requirements file
+        key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+        restore-keys: |
+          ${{ runner.os }}-nuget
+    
+    - name: Restore Dependecies
       run: dotnet restore
+    
     - name: Build
       run: dotnet build --no-restore
+    
     - name: Test
       run: dotnet test --no-build --verbosity normal
