--- a/.github/workflows/build-daemon.yml
+++ b/.github/workflows/build-daemon.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Build Daemon for Linux
+name: Build Daemon for Linux & Windows
 
 on:
   workflow_dispatch
@@ -11,14 +11,17 @@ on:
 #    branches: [ "main" ]
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
+  build-matrix:
     defaults:
       run:
         working-directory: ./daemon
+    
     strategy:
       matrix:
-        dotnet-version: [ '8.0.x' ]
+        os: [ubuntu-latest, windows-latest]
+
+    runs-on: ${{ matrix.os }}
+    
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
