--- a/daemon/Properties/launchSettings.json
+++ b/daemon/Properties/launchSettings.json
@@ -2,22 +2,22 @@
   "profiles": {
     "verbose noreset": {
       "commandName": "Project",
-      "commandLineArgs": "-d -v -nr -c .\\config.toml",
+      "commandLineArgs": "-d -v -nr -c .\\config\\config.toml",
       "workingDirectory": "H:\\Documents\\GitHub\\RadioConsole2\\daemon"
     },
     "verbose": {
       "commandName": "Project",
-      "commandLineArgs": "-d -v -c .\\config.toml",
+      "commandLineArgs": "-d -v -c .\\config\\config.toml",
       "workingDirectory": "H:\\Documents\\GitHub\\RadioConsole2\\daemon"
     },
     "debug": {
       "commandName": "Project",
-      "commandLineArgs": "-d -c .\\config.toml",
+      "commandLineArgs": "-d -c .\\config\\config.toml",
       "workingDirectory": "H:\\Documents\\GitHub\\RadioConsole2\\daemon"
     },
     "info only": {
       "commandName": "Project",
-      "commandLineArgs": "-c .\\config.toml",
+      "commandLineArgs": "-c .\\config\\config.toml",
       "workingDirectory": "H:\\Documents\\GitHub\\RadioConsole2\\daemon"
     }
   }
