--- a/.github/workflows/build-daemon.yml
+++ b/.github/workflows/build-daemon.yml
@@ -45,6 +45,9 @@ jobs:
     
     - name: Build
       run: dotnet build --no-restore
+
+    - name: Publish
+      run: dotnet publish
     
     - name: Test
       run: dotnet test --no-build --verbosity normal
