--- a/.github/workflows/build-daemon.yml
+++ b/.github/workflows/build-daemon.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Package
         run: |
           mkdir "${DAEMON_PATH}"
-          cp -r "${DAEMON_SRC_PATH}/bin/Release/net8.0/${{ matrix.runtime }}/publish/*" "${DAEMON_PATH}"
+          cp -r "/home/runner/work/RadioConsole2/RadioConsole2/daemon/bin/Release/net8.0/${{ matrix.runtime }}/publish/*" "${DAEMON_PATH}"
           zip -r "${DAEMON_PATH}.zip" "${DAEMON_PATH}"
       # Upload
       - name: Upload Daemon Artifacts
