--- a/.github/workflows/build-daemon.yml
+++ b/.github/workflows/build-daemon.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         runtime: [linux-x64, linux-arm64, win-x64]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       DAEMON_PATH: daemon-${{ matrix.runtime }}
       DAEMON_SRC_PATH: ./daemon
