--- a/.github/workflows/build-daemon.yml
+++ b/.github/workflows/build-daemon.yml
@@ -45,9 +45,8 @@ jobs:
       - name: Package
         run: |
           mkdir ${DAEMON_PATH}
-          ls ${DAEMON_SRC_PATH}
           cp -r ${DAEMON_SRC_PATH}/bin/Release/net8.0/${{ matrix.runtime }}/publish/* "${DAEMON_PATH}"
-          zip -r ${DAEMON_PATH}.zip "${DAEMON_PATH}/*"
+          zip ${DAEMON_PATH}.zip "${DAEMON_PATH}/*"
       # Upload
       - name: Upload Daemon Artifacts
         uses: actions/upload-artifact@v2
