--- a/.github/workflows/build-console.yml
+++ b/.github/workflows/build-console.yml
@@ -16,14 +16,15 @@ jobs:
 
       - name: Install Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version-file: 'console/package.json'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
         with:
-          run_install: false
+          run-install: 'console/package.json'
 
       - name: CD, install, and build
         run: |
           cd console
-          pnpm install
           pnpm dist-multi
