--- a/.github/workflows/build-console.yml
+++ b/.github/workflows/build-console.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
+        with:
+          version: ^8.14.0
 
       - name: CD, install, and build
         run: |
