--- a/.github/workflows/build-console.yml
+++ b/.github/workflows/build-console.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [ubuntu-latest]
     
     steps:
       - name: Checkout
