--- a/.github/workflows/build-console.yml
+++ b/.github/workflows/build-console.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [windows-latest]
     
     steps:
       - name: Checkout
@@ -26,4 +26,4 @@ jobs:
         run: |
           cd console
           pnpm install
-          pnpm dist-multi
+          electron-builer
