updated console icon

--- a/console/package.json
+++ b/console/package.json
@@ -19,7 +19,10 @@
             "target": [
                 "portable"
             ],
-            "icon": "console-icon.png"
+            "icon": "console-icon-576x576.png"
+        },
+        "linux": {
+            "icon": "console-icon-576x576.png"
         },
         "portable": {
             "artifactName": "rc2-console.exe"
