--- a/daemon/daemon.csproj
+++ b/daemon/daemon.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Concentus" Version="1.1.7" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="newtonsoft.json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
