--- a/daemon/daemon.csproj
+++ b/daemon/daemon.csproj
@@ -28,4 +28,10 @@
     <PackageReference Include="Tomlyn" Version="0.17.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="config.example.toml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
