--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DAEMON_SRC_PATH: ./daemon
+      PUBLISH_PATH: /opt/rc2-daemon
     steps:
       # Checkout repo with recursive submodules
       - name: Checkout Repo
@@ -89,7 +90,7 @@ jobs:
       # Restore, Build & Publish the daemon
       - name: Build & Publish
         working-directory: ${{ env.DAEMON_SRC_PATH }}
-        run: dotnet publish -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -o "./publish"
+        run: dotnet publish -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -o "${{ env.PUBLISH_PATH }}" "daemon.csproj"
       
       # Upload non-release artifacts
       - name: Upload non-release artifacts
@@ -98,10 +99,10 @@ jobs:
         with: 
           name: rc2-daemon-${{ matrix.runtime }}
           path: |
-            "${{ env.DAEMON_SRC_PATH }}/publish/daemon.exe"
-            "${{ env.DAEMON_SRC_PATH }}/publish/daemon"
-            "${{ env.DAEMON_SRC_PATH }}/publish/*.dll"
-            "${{ env.DAEMON_SRC_PATH }}/publish/config.example.toml"
+            "${{ env.PUBLISH_PATH }}/daemon.exe"
+            "${{ env.PUBLISH_PATH }}/daemon"
+            "${{ env.PUBLISH_PATH }}/*.dll"
+            "${{ env.PUBLISH_PATH }}/config.example.toml"
           if-no-files-found: error
       
       # Upload release zip
@@ -110,5 +111,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          Compress-Archive -Path "${{ env.DAEMON_SRC_PATH }}/publish/daemon.exe", "${{ env.DAEMON_SRC_PATH }}/publish/daemon", "${{ env.DAEMON_SRC_PATH }}/publish/*.dll", "${{ env.DAEMON_SRC_PATH }}/publish/config.example.toml" -Destination rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
+          Compress-Archive -Path "${{ env.PUBLISH_PATH }}/daemon.exe", "${{ env.PUBLISH_PATH }}/daemon", "${{ env.PUBLISH_PATH }}/*.dll", "${{ env.PUBLISH_PATH }}/config.example.toml" -Destination rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
           gh release upload ${{ inputs.release_tag }} rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
