added dynamic version number to console app, added release script

--- a/console/package.json
+++ b/console/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rc2-console",
-    "version": "1.0.0",
+    "version": "1.1.0-beta1",
     "description": "RadioConsole2 Client GUI",
     "author": "W3AXL",
     "license": "MIT",
