--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-    "dotnet.defaultSolution": "daemon/daemon.sln"
+    "dotnet.defaultSolution": "daemon/daemon.sln",
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/.hg/store/**": true,
+        "**/win-unpacked/**": true,
+    },
+    "typescript.tsserver.watchOptions": {
+        "excludeDirectories": [
+            "**/win-unpacked"
+        ]
+    }
 }
