--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,8 +108,16 @@ jobs:
       # Upload release zip
       - name: Upload release zip
         if: ${{ inputs.release }}
+        shell: pwsh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          Compress-Archive -Path "${{ env.PUBLISH_PATH }}/daemon.exe", "${{ env.PUBLISH_PATH }}/daemon", "${{ env.PUBLISH_PATH }}/*.dll", "${{ env.PUBLISH_PATH }}/config.example.toml" -Destination rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
-          gh release upload ${{ inputs.release_tag }} rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
+          if ($env:RUNNER_OS -eq "Windows") {
+            Compress-Archive -Path "${{ env.PUBLISH_PATH }}/daemon.exe", "${{ env.PUBLISH_PATH }}/daemon", "${{ env.PUBLISH_PATH }}/*.dll", "${{ env.PUBLISH_PATH }}/config.example.toml" -Destination rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
+            gh release upload ${{ inputs.release_tag }} rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
+          }
+          else {
+            tar -czvf rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.tar.gz "${{ env.PUBLISH_PATH }}/daemon" "${{ env.PUBLISH_PATH }}/*.dll" "${{ env.PUBLISH_PATH }}/config.example.toml"
+            gh release upload ${{ inputs.release_tag }} rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.tar.gz
+          }
+          
