--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,7 +115,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          Compress-Archive -Path "${{ env.PUBLISH_PATH }}/daemon.exe", "${{ env.PUBLISH_PATH }}/*.dll", "${{ env.PUBLISH_PATH }}/config.example.toml" -Destination rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
+          zip rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip ${{ env.PUBLISH_PATH }}/daemon.exe ${{ env.PUBLISH_PATH }}/*.dll ${{ env.PUBLISH_PATH }}/config.example.toml
           gh release upload ${{ inputs.release_tag }} rc2-daemon-${{ inputs.release_tag }}-${{ matrix.runtime }}.zip
 
       # Upload linux release tar
