--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = daemon/SDL
 	url = https://github.com/libsdl-org/SDL.git
 	branch = SDL2
+[submodule "daemon/rc2-core"]
+	path = daemon/rc2-core
+	url = https://github.com/W3AXL/rc2-core
