updated package.json to allow all dependencies to be built without approval

--- a/console/package.json
+++ b/console/package.json
@@ -44,8 +44,6 @@
         "serialport": "^13.0.0"
     },
     "pnpm": {
-        "onlyBuiltDependencies": [
-            "@serialport/bindings-cpp"
-        ]
+        "neverBuiltDependencies": []
     }
 }
