updated electron-builder to hopefully solve the weird build issue on windows in the github actions

--- a/console/package.json
+++ b/console/package.json
@@ -38,9 +38,10 @@
     "devDependencies": {
         "cross-env": "^7.0.3",
         "electron": "^28.3.3",
-        "electron-builder": "^24.13.3"
+        "electron-builder": "^25.1.8"
     },
     "dependencies": {
+        "electron-builder-squirrel-windows": "25.1.8",
         "serialport": "^13.0.0"
     },
     "pnpm": {
