--- a/console/package.json
+++ b/console/package.json
@@ -36,14 +36,14 @@
     },
     "keywords": [],
     "devDependencies": {
-        "@julusian/midi": "^3.6.1",
         "cross-env": "^7.0.3",
         "electron": "^28.3.3",
         "electron-builder": "^25.1.8"
     },
     "dependencies": {
         "electron-builder-squirrel-windows": "25.1.8",
-        "serialport": "^13.0.0"
+        "serialport": "^13.0.0",
+        "@julusian/midi": "^3.6.1"
     },
     "pnpm": {
         "neverBuiltDependencies": []
