--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # Build the windows client
+  # Build the console client
   build-client:
     strategy:
       matrix:
@@ -27,6 +27,10 @@ jobs:
     name: Build console client on ${{ matrix.arch }}
     runs-on: ${{ matrix.arch }}
     steps:
+      - name: Install dev dependencies on linux
+        if: contains(matrix.arch, 'ubuntu')
+        run: sudo apt install libasound2-dev
+
       - name: Checkout
         uses: actions/checkout@v4
 
